--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
 	<title> Vice and Virtue </title>
 </head>
 <body>
-	
+	<div class="container">
+        <nav class="navbar navbar-default navbar-tall navbar-full" role="navigation">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#global-nav">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">Bootstrap Themes</a>
+            </div>
+        </nav>
+    </div>
 </body>
 </html>
