--- a/index.html
+++ b/index.html
@@ -1,22 +1,61 @@
 <!DOCTYPE html>
 <head>
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/custom.css" type="text/css">
+
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title> Vice and Virtue </title>
 </head>
 <body>
 	<div class="container">
-        <nav class="navbar navbar-default navbar-tall navbar-full" role="navigation">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#global-nav">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">Bootstrap Themes</a>
+        <div class="header clearfix">
+            <nav>
+              <ul class="nav nav-pills pull-right">
+                <li role="presentation"><a href="#">Login</a></li>
+                <li role="presentation"><a href="#">Signup</a></li>
+              </ul>
+            </nav>
+            <h3 class="text-muted">Vice/Virtue</h3>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-6 col-sm-offset-3">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <span class="glyphicon glyphicon-piggy-bank" aria-hidden="true"></span>
+                        <b class="habit-title">Blow more $$$</b>
+                        <!-- Split button -->
+                        <button type="button" class="btn btn-success">
+                            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+                        </button>
+                        <button type="button" class="btn btn-danger">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        </button>
+
+
+<div class="btn-group">
+  <!-- <button type="button" class="btn btn-danger">Action</button> -->
+  <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <span class="caret"></span>
+    <span class="sr-only">Toggle Dropdown</span>
+  </button>
+  <ul class="dropdown-menu">
+    <li><a href="#">Edit</a></li>
+    <li role="separator" class="divider"></li>
+    <li><a href="#">Delete</a></li>
+  </ul>
+</div>
+
+                    </div>
+                    <div class="panel-footer">2x/day</div>
+                </div>
             </div>
-        </nav>
-    </div>
+        </div>
+    </div> <!-- Container -->
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
