--- a/failure.html
+++ b/failure.html
@@ -35,10 +35,10 @@
 					</div>
 					<div class="right clearfix">
 						<ul class="habit-options">
-							<li><a href="failure.html"><img class="option fail" src="x.png"></a></li>
-							<li><a href="success.html"><img class="option check" src="check.png"></a></li>
+							<li><img class="option fail" src="x.png"></li>
 						</ul>
 					</div>
+					<div class="habit-progress"></div>
 				</div>
 			</div>
 
