--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
 						</ul>
 					</div>
 				</div>
+				<div>
+					<p class="frequency-description">5 times/week</p>
+				</div>
 			</div>
 
 			<div class="habitbox">
-				<h1 class="text">Spend Less $$$</h1>
+				<h1 class="text">Workout</h1>
 				<span class="dropdown">
 					<select>
 						<option>Edit</option>
@@ -60,6 +63,9 @@
 							<li><img class="option check" src="check.png"></li>
 						</ul>
 					</div>
+				</div>
+				<div>
+					<p class="frequency-description">Once/day</p>
 				</div>
 			</div>
 		</div>
