--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 						</ul>
 					</div>
 				</div>
-				<div>
-					<p class="frequency-description">5 times/week</p>
+				<div class="habit-details clearfix">
+					<p class="below-core frequency-description">5 times/week</p>
 				</div>
 			</div>
 
@@ -55,7 +55,7 @@
 				</span>
 				<div class="habit-core clearfix">
 					<div class="left">
-						<img class="icon" src="piggybank.jpg">
+						<img class="icon" src="weightlifter3.png">
 					</div>
 					<div class="right clearfix">
 						<ul class="habit-options">
@@ -64,8 +64,9 @@
 						</ul>
 					</div>
 				</div>
-				<div>
-					<p class="frequency-description">Once/day</p>
+				<div class="habit-details clearfix">
+					<p class="below-core frequency-description">5 times/week</p>
+					<p class="below-core streak clearfix">Streak: 10/20</p>
 				</div>
 			</div>
 		</div>
