--- a/failure.html
+++ b/failure.html
@@ -35,15 +35,19 @@
 					</div>
 					<div class="right clearfix">
 						<ul class="habit-options">
-							<li><img class="option fail" src="x.png"></li>
+							<li><a href="failure.html"><img class="option fail" src="x.png"></a></li>
 						</ul>
 					</div>
-					<div class="habit-progress"></div>
+				</div>
+				<div class="habit-details clearfix">
+					<p class="below-core frequency-description">5 times/week</p>
+					<p class="below-core streak clearfix">Streak: 10/20</p>
+					<div class="habit-progress clearfix"></div>
 				</div>
 			</div>
 
 			<div class="habitbox">
-				<h1 class="text">Spend Less $$$</h1>
+				<h1 class="text">Workout</h1>
 				<span class="dropdown">
 					<select>
 						<option>Edit</option>
@@ -52,14 +56,18 @@
 				</span>
 				<div class="habit-core clearfix">
 					<div class="left">
-						<img class="icon" src="piggybank.jpg">
+						<img class="icon" src="weightlifter3.png">
 					</div>
 					<div class="right clearfix">
 						<ul class="habit-options">
-							<li><img class="option fail" src="x.png"></li>
-							<li><img class="option check" src="check.png"></li>
+							<li><a href="failure.html"><img class="option fail" src="x.png"></a></li>
+							<li><a href="success.html"><img class="option check" src="check.png"></a></li>
 						</ul>
 					</div>
+				</div>
+				<div class="habit-details clearfix">
+					<p class="below-core frequency-description">5 times/week</p>
+					<p class="below-core streak clearfix">Streak: 10/20</p>
 				</div>
 			</div>
 		</div>
