--- a/success.html
+++ b/success.html
@@ -31,6 +31,7 @@
 				</span>
 				<div class="habit-core clearfix">
 					<div class="left">
+						<h4 class="percent">55%</h4>
 						<img class="icon" src="piggybank.jpg">
 					</div>
 					<div class="right clearfix">
