--- a/failure.html
+++ b/failure.html
@@ -8,17 +8,6 @@
 </head>
 <body>
 	<div class="container">
-        <div class="navbar">
-			<div class="navbar-header">
-				<h3 class="text-muted">Vice/Virtue</h3>
-			</div>
-			<div class="navbar-right">
-				<ul class="navbar-list">
-				  <li role="presentation"><a href="#">Login</a></li>
-				  <li role="presentation"><a href="#">Signup</a></li>
-				</ul>
-			</div>
-        </div>
 
 		<div class="habitcontainer">
 			<div class="habitbox">
@@ -32,6 +21,7 @@
 				<div class="habit-core clearfix">
 					<div class="left">
 						<img class="icon" src="piggybank.jpg">
+						<h4 class="percent">27%</h4>
 					</div>
 					<div class="right clearfix">
 						<ul class="habit-options">
