--- a/failure.html
+++ b/failure.html
@@ -7,60 +7,49 @@
 	<title> Vice and Virtue </title>
 </head>
 <body>
+	<div class="nav">
+	    <ul>
+			<li class="logo"><span id="virtue">virtue</span>/<span id="vice">vice</span></li>
+			<li class="placeholder"> </li>
+			<li><span class="pagetitle">my habits</span></li>
+			<li class="register"><a href="#">Register</a></li>
+			<li class="login"><a href="#">Login</a></li>
+	    </ul>
+	 </div>
 	<div class="container">
-
 		<div class="habitcontainer">
 			<div class="habitbox">
-				<h1 class="text">Spend Less $$$</h1>
-				<span class="dropdown">
-					<select>
-						<option>Edit</option>
-						<option>Delete</option>
-					</select>
-				</span>
+				<h1 class="habit-title">Workout</h1>
+				<div class="dropdown">
+				    <button>&#9660;</button>
+				    <ul class="dropdown-menu">
+				        <li><a href="edit.html">Edit</a></li>
+				        <li><a href="#">Delete</a></li>
+				    </ul>
+				</div>
 				<div class="habit-core clearfix">
 					<div class="left">
-						<img class="icon" src="piggybank.jpg">
-						<h4 class="percent">27%</h4>
+						<h4 class="percent">80%</h4>
+						<img class="habit-icon" src="weightlifter3.png" alt="gettingSWOL">
 					</div>
 					<div class="right clearfix">
 						<ul class="habit-options">
-							<li><a href="failure.html"><img class="option fail" src="x.png"></a></li>
+							<li><a href="failure.html"><img class="option fail" src="x.png" alt="failure"></a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="habit-details clearfix">
-					<p class="below-core frequency-description">5 times/week</p>
-					<p class="below-core streak clearfix">Streak: 10/20</p>
+					<p class="below-core frequency-description">3 times/week</p>
+					<p class="below-core streak clearfix">Streak: 0 (Best: 1)</p>
 					<div class="habit-progress clearfix"></div>
-				</div>
-			</div>
-
-			<div class="habitbox">
-				<h1 class="text">Workout</h1>
-				<span class="dropdown">
-					<select>
-						<option>Edit</option>
-						<option>Delete</option>
-					</select>
-				</span>
-				<div class="habit-core clearfix">
-					<div class="left">
-						<img class="icon" src="weightlifter3.png">
-					</div>
-					<div class="right clearfix">
-						<ul class="habit-options">
-							<li><a href="failure.html"><img class="option fail" src="x.png"></a></li>
-							<li><a href="success.html"><img class="option check" src="check.png"></a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="habit-details clearfix">
-					<p class="below-core frequency-description">5 times/week</p>
-					<p class="below-core streak clearfix">Streak: 10/20</p>
 				</div>
 			</div>
 		</div>
 	</div>
+	<div>
+		<div class="addButton">
+	    	<a class="floating-button" href="add.html"><i>+</i></a>
+	    </div>
+    </div>
 </body>
 </html>
