Fixed some links for navigating the webpage; updated README

--- a/failure-2items.html
+++ b/failure-2items.html
@@ -34,8 +34,8 @@
 					</div>
 					<div class="right clearfix">
 						<ul class="habit-options">
-							<li><a href="failure.html"><img class="option fail" src="x.png" alt="failure"></a></li>
-							<li><a href="success.html"><img class="option check" src="check.png" alt="success"></a></li>
+							<li><a href="#"><img class="option fail" src="x.png" alt="failure"></a></li>
+							<li><a href="#"><img class="option check" src="check.png" alt="success"></a></li>
 						</ul>
 					</div>
 				</div>
@@ -60,7 +60,7 @@
 					</div>
 					<div class="right clearfix">
 						<ul class="habit-options">
-							<li><a href="success.html"><img class="option fail" src="x.png" alt="failure"></a></li>
+							<li><a href="#"><img class="option fail" src="x.png" alt="failure"></a></li>
 						</ul>
 					</div>
 				</div>
@@ -74,7 +74,7 @@
 	</div>
 	<div>
 		<div class="addButton">
-	    	<a class="floating-button" href="add.html"><i>+</i></a>
+	    	<a class="floating-button" href="#"><i>+</i></a>
 	    </div>
     </div>
 </body>
