--- a/home-2items.html
+++ b/home-2items.html
@@ -73,7 +73,7 @@
 	</div>
 	<div>
 		<div class="addButton">
-	    	<a class="floating-button" href="add.html"><i>+</i></a>
+	    	<a class="floating-button" href="#"><i>+</i></a>
 	    </div>
     </div>
 </body>
