Changed home.html to index.html

--- a/add.html
+++ b/add.html
@@ -65,7 +65,7 @@
 </div> 
 
 <div id="submitbutton">
-	<a href="home.html" class="back blue">Go Back</a>
+	<a href="index.html" class="back blue">Go Back</a>
 </div> 
 
 
