--- a/editWorkout.html
+++ b/editWorkout.html
@@ -61,11 +61,11 @@
  <br>
 
 <div id="gobackbutton">
-	<a href="home.html" class="btn blue">Submit</a>
+	<a href="index.html" class="btn blue">Submit</a>
 </div> 
 
 <div id="submitbutton">
-	<a href="home.html" class="back blue">Go Back</a>
+	<a href="index.html" class="back blue">Go Back</a>
 </div> 
 
 
