--- a/success-2items.html
+++ b/success-2items.html
@@ -25,7 +25,7 @@
 				    <button>&#9660;</button>
 				    <ul class="dropdown-menu">
 				        <li><a href="editMoney.html">Edit</a></li>
-				        <li><a href="home.html">Delete</a></li>
+				        <li><a href="index.html">Delete</a></li>
 				    </ul>
 				</div>
 				<div class="habit-core clearfix">
