--- a/success.html
+++ b/success.html
@@ -23,7 +23,7 @@
 				<div class="dropdown">
 				    <button>&#9660;</button>
 				    <ul class="dropdown-menu">
-				        <li><a href="edit.html">Edit</a></li>
+				        <li><a href="editWorkout.html">Edit</a></li>
 				        <li><a>Delete</a></li>
 				    </ul>
 				</div>
