Added extra page to fix workflow and removed font folder

--- a/failure-2items.html
+++ b/failure-2items.html
@@ -49,7 +49,7 @@
 				<div class="dropdown">
 				    <button>&#9660;</button>
 				    <ul class="dropdown-menu">
-				        <li><a href="editWorkout.html">Edit</a></li>
+				        <li><a href="editWorkout2.html">Edit</a></li>
 				        <li><a>Delete</a></li>
 				    </ul>
 				</div>
