--- a/home-2items.html
+++ b/home-2items.html
@@ -50,7 +50,7 @@
 				<div class="dropdown">
 				    <button>&#9660;</button>
 				    <ul class="dropdown-menu">
-				        <li><a href="editWorkout.html">Edit</a></li>
+				        <li><a href="editWorkout2.html">Edit</a></li>
 				        <li><a href="#">Delete</a></li>
 				    </ul>
 				</div>
