--- a/src/list.html
+++ b/src/list.html
@@ -111,6 +111,21 @@
             var parent = child.parentNode;
             parent.removeChild(child);
         }
+
+        var query = new Parse.Query(GameScore);
+        query.find({
+          success: function(results) {
+            alert("Successfully retrieved " + results.length + " scores.");
+            // Do something with the returned Parse.Object values
+            for (var i = 0; i < results.length; i++) {
+              var object = results[i];
+              alert(object.id + ' - ' + object.get('playerName'));
+            }
+          },
+          error: function(error) {
+            alert("Error: " + error.code + " " + error.message);
+          }
+        });
     </script>
 </body>
 </html>
