--- a/src/list.html
+++ b/src/list.html
@@ -66,7 +66,7 @@
                 </div>
             </li>
 
-            <li>
+            <li >
                 <ul class="habit-info">
                     <li><div class="habit-name">Exercise 30 minutes</div></li>
                     <li><img class="habit-icon" src="../img/run.jpg" alt="habit icon"></li>
@@ -87,7 +87,7 @@
                     </button>
                     <button type="button" class="op op-edit" onclick="location.href='edit.html'" title="edit habit">
                         <img src="../img/edit.svg" alt="Edit">
-                    </button>
+                    </button
                     <button type="button" class="op op-del" onclick="deleteHabit(this);" title="delete habit">
                         <img src="../img/delete.svg" alt="Del">
                     </button>
