--- a/src/list.html
+++ b/src/list.html
@@ -102,9 +102,7 @@
             }
 
             var res = list.appendChild(clone);
-
         }
-
 
         var query = new Parse.Query(Habit);
         query.find({
@@ -115,11 +113,50 @@
                 console.log(results[i])
                 console.log(results[i].id)
             }
+            notifyMe()
           },
           error: function(error) {
             alert("Error: " + error.code + " " + error.message);
           }
         });
+
+        function notifyMe() {
+              console.log("woooo notifs")
+              console.log(Notification.permission)
+
+              // Let's check if the browser supports notifications
+              if (!("Notification" in window)) {
+                alert("This browser does not support desktop notification");
+                console.log("browser doesn't support notifs")
+              }
+              // Let's check whether notification permissions have already been granted
+              else if (Notification.permission === "granted") {
+                // If it's okay let's create a notification
+                var notification = new Notification("Test notification");
+              }
+
+              // Otherwise, we need to ask the user for permission
+              else if (Notification.permission !== 'denied') {
+                Notification.requestPermission(function (permission) {
+                  // If the user accepts, let's create a notification
+                  if (permission === "granted") {
+                    var notification = new Notification("Hi there!");
+                  }
+                });
+              }
+
+              // Otherwise, we need to ask the user for permission
+              else if (Notification.permission === 'denied') {
+                Notification.requestPermission(function (permission) {
+                  // If the user accepts, let's create a notification
+                  if (permission === "granted") {
+                    var notification = new Notification("Hi there!");
+                  }
+                });
+              }
+          // At last, if the user has denied notifications, and you
+          // want to be respectful there is no need to bother them any more.
+        }
     </script>
 </body>
 </html>
