--- a/src/add.html
+++ b/src/add.html
@@ -77,7 +77,7 @@
 			Parse.initialize("Ih70t530LwJAnRJungwuPtE2nE3eakzmwVuZHb6O", "sE6Y6iMcoTTa9Z3pBCaAtwnD9F1L9SlWHBKlDQ7h");
 
 			var Habit = Parse.Object.extend("Habit");
-			var habit = new Habit();
+			var defaultImage = Parse.Object.extend("DefaultImages");
 			var fileName;
 
 			function selectImage(name) {
@@ -101,38 +101,6 @@
 
 				habitToAdd.set("username", "smarties");
 				habitToAdd.set("name", document.getElementById("title").value);
-
-				// Image upload
-				var default1 = document.getElementById('icon1');
-				var default2 = document.getElementById('icon2');
-
-				if (hasClass(document.getElementById('icon1'), "selectedIcon")) {
-					habitToAdd.set("defaultIconID", "0JrjvKGnbG");
-				}
-				else if (hasClass(document.getElementById('icon2'), "selectedIcon")) {
-					habitToAdd.set("defaultIconID", "zgGDtotXrU");
-				}
-				else if (hasClass(document.getElementById('icon3'), "selectedIcon")) {
-					habitToAdd.set("defaultIconID", "qww3v520kk");
-				}
-				// If uploaded image was selected
-				else {
-					var fileUploadControl = $("#iconFileUpload")[0];
-					if (fileUploadControl.files.length > 0) {
-						var file = fileUploadControl.files[0];
-						var name = "icon.jpg";
-
-						var parseFile = new Parse.File(name, file);
-					}
-
-					parseFile.save().then(function() {
-						// The file has been saved to Parse.
-					}, function(error) {
-						// The file either could not be read, or could not be saved to Parse.
-					});
-					habitToAdd.set("icon", parseFile);
-				}
-
 				habitToAdd.set("onSunday", document.getElementById('isSun').checked);
 				habitToAdd.set("onMonday", document.getElementById('isMon').checked);
 				habitToAdd.set("onTuesday", document.getElementById('isTues').checked);
@@ -159,7 +127,128 @@
 				} */
 				habitToAdd.set("frequency", frequency);
 
-				habitToAdd.save(null, {
+				// Image upload
+				if (hasClass(document.getElementById('icon1'), "selectedIcon")) {
+					var query = new Parse.Query(defaultImage);
+					query.get("0JrjvKGnbG", {
+					    success: function(defaultIcon) {
+					        habitToAdd.set("icon", defaultIcon.get("icon"));
+
+					        habitToAdd.save(null, {
+								success: function(habitToAdd) {
+									// Execute any logic that should take place after the object is saved.
+									// alert('New object created with objectId: ' + habitToAdd.id);
+
+									console.log('new object created with objectId: ' + habitToAdd.id);
+									location = "list.html"
+								},
+								error: function(habitToAdd, error) {
+									// Execute any logic that should take place if the save fails.
+									// error is a Parse.Error with an error code and message.
+									alert('Failed to create new object, with error code: ' + error.message);
+								}
+							});
+					    },
+					    error: function(object, error) {
+					        // The object was not retrieved successfully.
+					        // error is a Parse.Error with an error code and message.
+					    }
+					});
+
+					// habitToAdd.set("defaultIconID", "0JrjvKGnbG");
+				}
+				else if (hasClass(document.getElementById('icon2'), "selectedIcon")) {
+					var query = new Parse.Query(defaultImage);
+					query.get("zgGDtotXrU", {
+					    success: function(defaultIcon) {
+					        habitToAdd.set("icon", defaultIcon.get("icon"));
+
+					        habitToAdd.save(null, {
+								success: function(habitToAdd) {
+									// Execute any logic that should take place after the object is saved.
+									// alert('New object created with objectId: ' + habitToAdd.id);
+
+									console.log('new object created with objectId: ' + habitToAdd.id);
+									location = "list.html"
+								},
+								error: function(habitToAdd, error) {
+									// Execute any logic that should take place if the save fails.
+									// error is a Parse.Error with an error code and message.
+									alert('Failed to create new object, with error code: ' + error.message);
+								}
+							});
+					    },
+					    error: function(object, error) {
+					        // The object was not retrieved successfully.
+					        // error is a Parse.Error with an error code and message.
+					    }
+					});
+
+					// habitToAdd.set("defaultIconID", "zgGDtotXrU");
+				}
+				else if (hasClass(document.getElementById('icon3'), "selectedIcon")) {
+					var query = new Parse.Query(defaultImage);
+					query.get("qww3v520kk", {
+					    success: function(defaultIcon) {
+					        habitToAdd.set("icon", defaultIcon.get("icon"));
+
+					        habitToAdd.save(null, {
+								success: function(habitToAdd) {
+									// Execute any logic that should take place after the object is saved.
+									// alert('New object created with objectId: ' + habitToAdd.id);
+
+									console.log('new object created with objectId: ' + habitToAdd.id);
+									location = "list.html"
+								},
+								error: function(habitToAdd, error) {
+									// Execute any logic that should take place if the save fails.
+									// error is a Parse.Error with an error code and message.
+									alert('Failed to create new object, with error code: ' + error.message);
+								}
+							});
+					    },
+					    error: function(object, error) {
+					        // The object was not retrieved successfully.
+					        // error is a Parse.Error with an error code and message.
+					    }
+					});
+
+					// habitToAdd.set("defaultIconID", "qww3v520kk");
+				}
+				// If uploaded image was selected
+				else {
+					var fileUploadControl = $("#iconFileUpload")[0];
+					if (fileUploadControl.files.length > 0) {
+						var file = fileUploadControl.files[0];
+						var name = "icon.jpg";
+
+						var parseFile = new Parse.File(name, file);
+					}
+
+					parseFile.save().then(function() {
+						// The file has been saved to Parse.
+					}, function(error) {
+						// The file either could not be read, or could not be saved to Parse.
+					});
+					habitToAdd.set("icon", parseFile);
+
+					habitToAdd.save(null, {
+						success: function(habitToAdd) {
+							// Execute any logic that should take place after the object is saved.
+							// alert('New object created with objectId: ' + habitToAdd.id);
+
+							console.log('new object created with objectId: ' + habitToAdd.id);
+							location = "list.html"
+						},
+						error: function(habitToAdd, error) {
+							// Execute any logic that should take place if the save fails.
+							// error is a Parse.Error with an error code and message.
+							alert('Failed to create new object, with error code: ' + error.message);
+						}
+					});
+				}
+
+				/* habitToAdd.save(null, {
 					success: function(habitToAdd) {
 						// Execute any logic that should take place after the object is saved.
 						// alert('New object created with objectId: ' + habitToAdd.id);
@@ -172,7 +261,7 @@
 						// error is a Parse.Error with an error code and message.
 						alert('Failed to create new object, with error code: ' + error.message);
 					}
-				});
+				}); */
 			}
 
 			function uploadIcon(){
